--- a/package.json
+++ b/package.json
@@ -2,29 +2,29 @@
   "name": "mass-version-updater",
   "version": "1.0.1",
   "description": "Multi technology versioning tool",
-  "main": "./src/MvuApp.js",
+  "main": "./lib/MvuApp.js",
   "bin": {
-    "mvu": "./src/MvuApp.js"
+    "mvu": "./lib/MvuApp.js"
   },
   "engines": {
     "node": ">=7.6.0"
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/ustream/mvu"
+    "url": "https://github.com/cmakara/mvu"
   },
   "scripts": {
-    "lint_and_test": "npm run lint && npm run test",
-    "lint_and_test_tc": "npm run lint && npm run test_tc",
     "lint": "eslint 'src/**/*.js'",
-    "test": "mocha ./tests/**",
-    "test_coverage": "nyc --check-coverage --lines 50 --reporter=text mocha --reporter mocha-junit-reporter ./tests/**",
-    "test_tc": "nyc --check-coverage --lines 50 --reporter=teamcity mocha --reporter mocha-junit-reporter ./tests/**"
+    "test": "mocha --require @babel/register ./tests/**",
+    "test:coverage": "nyc --check-coverage --lines 50 --reporter=text mocha --reporter mocha-junit-reporter ./tests/**",
+    "babel:build": "babel src -d lib --delete-dir-on-start",
+    "babel:watch": "babel src -d lib --delete-dir-on-start -w"
   },
   "author": "Csaba Makara",
-  "email" : "csaba.makara@hu.ibm.com",
+  "email": "csaba.makara@gmail.com",
   "license": "MIT",
   "dependencies": {
+    "@babel/runtime": "7.0.0-beta.44",
     "async": "^2.4.1",
     "chalk": "^1.1.3",
     "commander": "^2.9.0",
@@ -37,19 +37,26 @@
     "winston": "^2.3.1"
   },
   "devDependencies": {
-    "chai": "^4.1.0",
-    "eslint": "^4.3.0",
-    "eslint-config-airbnb-base": "^11.3.1",
+    "@babel/cli": "7.0.0-beta.44",
+    "@babel/core": "7.0.0-beta.44",
+    "@babel/plugin-transform-runtime": "7.0.0-beta.44",
+    "@babel/preset-env": "7.0.0-beta.44",
+    "@babel/preset-stage-1": "7.0.0-beta.44",
+    "@babel/register": "^7.0.0-beta.46",
+    "babel-eslint": "^8.2.5",
+    "chai": "^4.1.2",
+    "eslint": "^5.1.0",
+    "eslint-config-airbnb-base": "^13.0.0",
     "eslint-config-google": "^0.9.1",
-    "eslint-config-standard": "^10.2.1",
-    "eslint-plugin-import": "^2.7.0",
-    "eslint-plugin-node": "^5.1.1",
-    "eslint-plugin-promise": "^3.5.0",
+    "eslint-config-standard": "^11.0.0",
+    "eslint-plugin-import": "^2.13.0",
+    "eslint-plugin-node": "^6.0.1",
+    "eslint-plugin-promise": "^3.8.0",
     "eslint-plugin-standard": "^3.0.1",
-    "mocha": "3.4.2",
-    "mocha-junit-reporter": "^1.13.0",
-    "nyc": "^11.0.3",
-    "sinon": "^2.4.1",
+    "mocha": "5.2.0",
+    "mocha-junit-reporter": "^1.17.0",
+    "nyc": "^12.0.2",
+    "sinon": "^6.1.3",
     "os-tmpdir": "1.0.2"
   }
 }
