--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "inquirer": "3.0.6",
     "ora": "^1.2.0",
     "path": "^0.12.7",
+    "rimraf": "^2.6.2",
     "sendgrid": "^5.1.1",
     "simple-git": "1.72.0",
     "winston": "^2.3.1"
